--- a/all-benchmark/fmm/Makefile.config
+++ b/all-benchmark/fmm/Makefile.config
@@ -1,11 +1,11 @@
-CC := clang
-CFLAGS := -c -g -emit-llvm
+CC := gcc
+CFLAGS := -L. -Wall -O2 -D_REENTRANT
 
 MACROS := ./null_macros/c.m4.null.POSIX
 M4 := m4 -s -Ulen -Uindex
 
 $(TARGET): $(OBJS)
-	llvm-link $(OBJS) -o $(TARGET)
+	$(CC) $(OBJS) -o $(TARGET)
 
 clean:
 	rm -rf *.c *.h *.o $(TARGET)
