--- a/splash2-master/kernels/fft/Makefile
+++ b/splash2-master/kernels/fft/Makefile
@@ -1,5 +1,7 @@
 TARGET = FFT
-OBJS = fft.o
+OBJS = BullMoose_8.o fft.o
 
 include ../../Makefile.config
 
+BullMoose_8.c: BullMoose_8.h
+fft.c: BullMoose_8.h
