--- a/3_windows_load.pthread/programme/makefile
+++ b/3_windows_load.pthread/programme/makefile
@@ -2,14 +2,14 @@ TARGET = programme
 OBJS = thread_windows.o
 
 CC := gcc
-CFLAGS :=
+CFLAGS := -O3 -g3 -pthread -D_POSIX_C_SOURCE=200112
 LDFLAGS := -lm -static
 
 $(TARGET): $(OBJS)
 	$(CC) $(OBJS) $(CFLAGS) -o $(TARGET) $(LDFLAGS)
 
 clean:
-	rm -rf *.o $(TARGET)
+	rm -rf *.C *.H *.o $(TARGET)
 
 .c.o:
 	$(CC) -c $(CFLAGS) $*.c
